Correct overflow items in midddle div

--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-*html{
-    top: 0;
-    position: fixed;
-}
+@media only screen and (min-width:200px){
 header{
     margin-top: 0;
     background-image: url("./images/backgrounds/landing.jpg") ;
@@ -134,6 +131,7 @@ button{
     height: 599px;
     padding-top: 20px;
     margin-bottom: 50px;
+   
 }
 .middle>#items{
     width: 80%;
@@ -144,6 +142,7 @@ button{
     margin: 50px auto 50px auto;
     
     text-align: center;
+    overflow: scroll;
 }
 #allimages, #fastfood p{
     color: #F15A29;
@@ -267,6 +266,6 @@ button{
       padding-left: 100px;
   }
         
-    
+}  
     
  
